--- a/src/app/sistema/estoque/estoque-produtos/estoque-produtos.component.html
+++ b/src/app/sistema/estoque/estoque-produtos/estoque-produtos.component.html
@@ -1,82 +1,116 @@
 <div class="row m-0 justify-content-center align-items-center">
+    <!-- Pesquisar -->
+    <div class="col-4 px-2 p-0 m-0 position-relative">
+        <input class="
+        form-control form-control-lg
+        border-0
+        h-limited
+        py-2
+        ps-4
+        pe-5
+        rounded-15
+        shadow-sm
+      " type="text" placeholder="Pesquisar" />
+        <a>
+            <i class="
+          bi-search
+          fs-4
+          position-absolute
+          translate-middle
+          top-50
+          me-4
+          end-0
+        "></i>
+        </a>
+    </div>
 
-  <!-- Pesquisar -->
-  <div class="col-4 px-2 p-0 m-0 position-relative">
-    <input class="form-control form-control-lg border-0 h-limited py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar">
-    <a>
-      <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
-    </a>
-  </div>
+    <!-- Botão Filtro -->
+    <div class="col-4 px-2 p-0 m-0">
+        <a class="
+        rounded-15
+        py-2
+        px-4
+        bg-white
+        h-limited
+        d-flex
+        justify-content-between
+        shadow-sm
+      ">
+            <h5 class="fw-normal my-auto text-truncate text-custom-dark">Filtro</h5>
+            <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
+        </a>
+    </div>
 
-  <!-- Botão Filtro -->
-  <div class="col-4 px-2 p-0 m-0">
-    <a class="rounded-15 py-2 px-4 bg-white h-limited d-flex justify-content-between shadow-sm">
-      <h5 class="fw-normal my-auto text-truncate text-custom-dark">Filtro</h5>
-      <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
-    </a>
-  </div>
-
-  <!-- Adicionar -->
-  <div class="col-1 px-2 p-0 m-0 text-center">
-    <a class="px-2 py-2">
-      <i class="bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark"></i>
-    </a>
-  </div>
+    <!-- Adicionar -->
+    <div class="col-1 px-2 p-0 m-0 text-center">
+        <a class="px-2 py-2">
+            <i class="
+          bi-plus-square-fill
+          icon-view
+          my-auto
+          fs-3
+          p-2
+          m-0
+          fw-bold
+          text-custom-dark
+        "></i>
+        </a>
+    </div>
 </div>
 
 <!-- Títulos da Tabela -->
 <div class="row m-0 my-5 text-custom-dark">
-  <div class="col-1">
-    <h5 class="fw-bold">Código</h5>
-  </div>
-  <div class="col-2">
-    <h5 class="fw-bold">Produto</h5>
-  </div>
-  <div class="col-1">
-    <h5 class="fw-bold text-truncate">Unidade de medida</h5>
-  </div>
-  <div class="col-1">
-    <h5 class="fw-bold text-truncate">Custo médio</h5>
-  </div>
-  <div class="col-2">
-    <h5 class="fw-bold text-truncate">Valor de venda</h5>
-  </div>
-  <div class="col-1">
-    <h5 class="fw-bold text-truncate">Estoque</h5>
-  </div>
-  <div class="col-2">
-    <h5 class="fw-bold text-truncate">Total</h5>
-  </div>
-  <div class="col-2">
-    <h5 class="fw-bold d-none">Ações</h5>
-  </div>
+    <div class="col-1">
+        <h5 class="fw-bold">Código</h5>
+    </div>
+    <div class="col-2">
+        <h5 class="fw-bold">Produto</h5>
+    </div>
+    <div class="col-1">
+        <h5 class="fw-bold text-truncate">Unidade de medida</h5>
+    </div>
+    <div class="col-1">
+        <h5 class="fw-bold text-truncate">Custo médio</h5>
+    </div>
+    <div class="col-2">
+        <h5 class="fw-bold text-truncate">Valor de venda</h5>
+    </div>
+    <div class="col-1">
+        <h5 class="fw-bold text-truncate">Estoque</h5>
+    </div>
+    <div class="col-2">
+        <h5 class="fw-bold text-truncate">Total</h5>
+    </div>
+    <div class="col-2">
+        <h5 class="fw-bold d-none">Ações</h5>
+    </div>
 </div>
 
 <!-- Tabela -->
 <div class="row m-0 mt-3 border-bottom text-custom-dark" *ngFor="let produto of estoque_produtos">
-  <div class="col-1">
-    <p>{{ produto.codigo }}</p>
-  </div>
-  <div class="col-2">
-    <p>{{ produto.nome }}</p>
-  </div>
-  <div class="col-1">
-    <p>{{ produto.unidade_medida }}</p>
-  </div>
-  <div class="col-1">
-    <p>{{ produto.custo | currency:'BRL' }}</p>
-  </div>
-  <div class="col-2">
-    <p>{{ produto.valor_venda | currency:'BRL' }}</p>
-  </div>
-  <div class="col-1">
-    <p>{{ produto.estoque }}</p>
-  </div>
-  <div class="col-2">
-    <p>{{ produto.total | currency:'BRL' }}</p>
-  </div>
-  <div class="col-2 text-end">
-    <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer" routerLink="/sistema/estoque/detalhe/{{produto.codigo}}"></i>
-    <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
-  </div>
+    <div class="col-1">
+        <p>{{ produto.codigo }}</p>
+    </div>
+    <div class="col-2">
+        <p>{{ produto.nome }}</p>
+    </div>
+    <div class="col-1">
+        <p>{{ produto.unidade_medida }}</p>
+    </div>
+    <div class="col-1">
+        <p>{{ produto.custo | currency: "BRL" }}</p>
+    </div>
+    <div class="col-2">
+        <p>{{ produto.valor_venda | currency: "BRL" }}</p>
+    </div>
+    <div class="col-1">
+        <p>{{ produto.estoque }}</p>
+    </div>
+    <div class="col-2">
+        <p>{{ produto.total | currency: "BRL" }}</p>
+    </div>
+    <div class="col-2 text-end">
+        <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer" routerLink="/sistema/estoque/detalhe/{{ produto.codigo }}"></i>
+        <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
+    </div>
 </div>
