--- a/src/app/sistema/estoque/suprimentos/suprimentos.component.html
+++ b/src/app/sistema/estoque/suprimentos/suprimentos.component.html
@@ -1,72 +1,107 @@
 <div class="row m-0 justify-content-center align-items-center">
+    <!-- Pesquisar -->
+    <div class="col-4 px-2 p-0 m-0 position-relative">
+        <input class="
+        form-control form-control-lg
+        border-0
+        h-limited
+        py-2
+        ps-4
+        pe-5
+        rounded-15
+        shadow-sm
+      " type="text" placeholder="Pesquisar" />
+        <a>
+            <i class="
+          bi-search
+          fs-4
+          position-absolute
+          translate-middle
+          top-50
+          me-4
+          end-0
+        "></i>
+        </a>
+    </div>
 
-  <!-- Pesquisar -->
-  <div class="col-4 px-2 p-0 m-0 position-relative">
-    <input class="form-control form-control-lg border-0 h-limited py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar">
-    <a>
-      <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
-    </a>
-  </div>
+    <!-- Botão Filtro -->
+    <div class="col-4 px-2 p-0 m-0">
+        <a class="
+        rounded-15
+        py-2
+        px-4
+        bg-white
+        h-limited
+        d-flex
+        justify-content-between
+        shadow-sm
+      ">
+            <h5 class="fw-normal my-auto text-truncate text-custom-dark">Filtro</h5>
+            <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
+        </a>
+    </div>
 
-  <!-- Botão Filtro -->
-  <div class="col-4 px-2 p-0 m-0">
-    <a class="rounded-15 py-2 px-4 bg-white h-limited d-flex justify-content-between shadow-sm">
-      <h5 class="fw-normal my-auto text-truncate text-custom-dark">Filtro</h5>
-      <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
-    </a>
-  </div>
-
-
-  <!-- Adicionar produtos -->
-  <div class="col-1 px-2 p-0 m-0 text-center">
-    <a class="px-2 py-2"  data-bs-toggle="modal" data-bs-target="#adicionarSuprimentos">
-      <i class="bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark"></i>
-    </a>
-  </div>
+    <!-- Adicionar produtos -->
+    <div class="col-1 px-2 p-0 m-0 text-center">
+        <a class="px-2 py-2" data-bs-toggle="modal" data-bs-target="#adicionarSuprimentos">
+            <i class="
+          bi-plus-square-fill
+          icon-view
+          my-auto
+          fs-3
+          p-2
+          m-0
+          fw-bold
+          text-custom-dark
+        "></i>
+        </a>
+    </div>
 </div>
 
 <!-- Títulos da Tabela -->
 <div class="row m-0 my-5 text-custom-dark justify-content-center">
-  <div class="col-1">
-    <h5 class="fw-bold">Código</h5>
-  </div>
-  <div class="col-3">
-    <h5 class="fw-bold">Produto</h5>
-  </div>
-  <div class="col-3">
-    <h5 class="fw-bold text-truncate">Custo unitário</h5>
-  </div>
-  <div class="col-3">
-    <h5 class="fw-bold text-truncate">Quantidade</h5>
-  </div>
-  <div class="col-2">
-    <h5 class="fw-bold d-none">Ações</h5>
-  </div>
+    <div class="col-1">
+        <h5 class="fw-bold">Código</h5>
+    </div>
+    <div class="col-3">
+        <h5 class="fw-bold">Produto</h5>
+    </div>
+    <div class="col-3">
+        <h5 class="fw-bold text-truncate">Custo unitário</h5>
+    </div>
+    <div class="col-3">
+        <h5 class="fw-bold text-truncate">Quantidade</h5>
+    </div>
+    <div class="col-2">
+        <h5 class="fw-bold d-none">Ações</h5>
+    </div>
 </div>
 
 <!-- Tabela -->
 <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let suprimento of suprimentos">
-  <div class="col-1">
-    <p>{{ suprimento.codigo }}</p>
-  </div>
-  <div class="col-3">
-    <p>{{ suprimento.nome }}</p>
-  </div>
-  <div class="col-3">
-    <p>{{ suprimento.custo | currency:'BRL' }}</p>
-  </div>
-  <div class="col-3">
-    <p>{{ suprimento.quantidade }} unidade(s)</p>
-  </div>
-  <div class="col-2 text-end">
-    <a data-bs-toggle="modal" data-bs-target="#viewSuprimento" (click)="loadSuprimentoView(suprimento)">
-    <i class="fs-5 bi-eye-fill icon-view p-3" (click)="loadSuprimentoView(suprimento)" cursor="pointer"></i>
-    </a> 
-  <a>
-    <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
-  </a>
- </div>
+    <div class="col-1">
+        <p>{{ suprimento.codigo }}</p>
+    </div>
+    <div class="col-3">
+        <p>{{ suprimento.name }}</p>
+    </div>
+    <div class="col-3">
+        <p>{{ suprimento.custo | currency: "BRL" }}</p>
+    </div>
+    <div class="col-3">
+        <p>{{ suprimento.quantidade }} unidade(s)</p>
+    </div>
+    <div class="col-2 text-end">
+        <a data-bs-toggle="modal" data-bs-target="#viewSuprimento" (click)="loadSuprimentoView(suprimento)">
+            <i class="fs-5 bi-eye-fill icon-view p-3" (click)="loadSuprimentoView(suprimento)" cursor="pointer"></i>
+        </a>
+        <a data-bs-toggle="modal" data-bs-target="#editSuprimento" (click)="loadSuprimentoEdit(suprimento)">
+            <i class="fs-5 bi-pen-fill icon-edit p-3" (click)="loadSuprimentoEdit(suprimento)" cursor="pointer"></i>
+        </a>
+    </div>
 </div>
 
 <app-adicionar-suprimentos></app-adicionar-suprimentos>
 <app-view-suprimento></app-view-suprimento>
+<app-edit-fornecedor></app-edit-fornecedor>
+<app-edit-suprimento></app-edit-suprimento>
