--- a/src/app/sistema/config/cadastro-de-loja/listar-cadastro-loja/listar-cadastro-loja.component.html
+++ b/src/app/sistema/config/cadastro-de-loja/listar-cadastro-loja/listar-cadastro-loja.component.html
@@ -5,14 +5,17 @@
     <app-sidemenu></app-sidemenu>
   </div>
   <div class="col m-0 bg-custom-white">
-    <!-- Lista de Usuários do Sistema -->
+    <!-- Lista de lojas cadastradas -->
     <div class="container">
 
       <!-- Botão de voltar -->
-      <div class="row m-0 justify-content-start mt-4">
+      <div class="row m-0 justify-content-start mt-4 align-items-center">
         <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema/configuracoes">
           <i class="bi-arrow-left fs-3 text-secondary"></i>
         </a>
+        <div class="col-11">
+            <h3 class="text-secondary text-center">Cadastro de loja</h3>
+        </div>
       </div>
 
       <!-- Adicionar, Pesquisar e Filtro -->
@@ -20,7 +23,7 @@
 
         <!-- Botão Adicionar -->
         <div class="col-4 px-2 p-0 m-0">
-          <a class="rounded-15 py-1 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm" routerLink="/sistema/usuarios-sistema/criar/">
+          <a class="rounded-15 py-1 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm" routerLink="/sistema/configuracoes/lojas-cadastradas/cadastrar">
             <h5 class="fw-normal my-auto text-truncate text-custom-dark " >Adicionar</h5>
             <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
           </a>
@@ -28,7 +31,7 @@
 
         <!-- Pesquisar -->
         <div class="col-4 px-2 p-0 m-0 position-relative">
-          <input (keyup)="filtrar($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar">
+          <input class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar">
           <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
         </div>
         
@@ -43,39 +46,28 @@
 
       <!-- Títulos da Tabela -->
       <div class="row m-0 my-5 text-custom-dark justify-content-center">
-        <div class="col-3">
-          <h5 class="fw-bold">Usuário</h5>
-        </div>
-        <div class="col-5 col-lg-4">
-          <h5 class="fw-bold">E-mail</h5>
-        </div>
-        <div class="col-2 col-lg-3">
-          <h5 class="fw-bold">Permissão</h5>
+        <!-- <div class="col-10">
+          <h5 class="fw-bold">Loja</h5>
         </div>
         <div class="col-2">
-          <h5 class="fw-bold d-none">Ações</h5>
-        </div>
+          <h5 class="fw-bold">Ações</h5>
+        </div> -->
       </div>
 
       <!-- Tabela -->
-      <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let usuario of usuarios">
-        <div class="col-3">
-          <p>{{ usuario.name }} {{ usuario.surname }}</p>
+      <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let loja of lojas">
+        <div class="col-10">
+          <p>Lorem ipsum</p>
         </div>
-        <div class="col-5 col-lg-4">
-          <p>{{ usuario.email }}</p>
-        </div>
-        <div class="col-2 col-lg-3">
-          <p>{{ usuario.permission == 1 ? 'Administrador' : 'Funcionário ' }}</p>
-        </div>
+
         <div class="col-2 text-end">
           <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer"></i>
-          <i class="fs-5 bi-pen-fill icon-edit p-3" routerLink="/sistema/usuarios-sistema/editar/{{usuario.id}}" cursor="pointer"></i>
-          <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer" (click)="deleteUser(usuario.id)"></i>
+          <i class="fs-5 bi-pen-fill icon-edit p-3" routerLink="" cursor="pointer"></i>
+          <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer" ></i>
         </div>
       </div>
 
     </div>
-    <!-- /Lista de Usuários do Sistema -->
+    <!-- /Lista de lojas cadastrardas -->
   </div>
 </div>
